--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,42 @@ body {
   font-family: "Karla", sans-serif;
   margin: 0;
 }
+
+main {
+  padding: 36px;
+}
+
+.header {
+  display:flex;
+  align-items: center;
+  height: 65px;
+  background: linear-gradient();
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  color: white;
+  padding: 20px;
+}
+
+.header--image {
+  height: 100%;
+  margin-right: 6px;
+}
+
+.header--title {
+  font-size: 1.25rem;
+  margin-right: auto;
+}
+
+.header--project {
+  font-size: .7;
+  font-weight: 500;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 30px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+}
