--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ main {
 }
 
 .header--project {
-  font-size: .7;
+  font-size: 0.75rem;
   font-weight: 500;
 }
 
@@ -44,4 +44,17 @@ main {
 
 .form--button {
   grid-column: 1 / -1;
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form--input {
+  font-family: "Karla",sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
 }
